config/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: service
  labels:
    name: service
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
  labels:
    name: elastic
