config/fluentd-daemonset-elasticsearch-rbac.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: elastic
  labels:
    k8s-app: fluentd
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  selector:
    matchLabels:
      k8s-app: fluentd
  template:
    metadata:
      labels:
        k8s-app: fluentd
        kubernetes.io/cluster-service: "true"
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd
        image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker
          readOnly: true
        - name: config-volume
          mountPath: /etc/fluent/config.d
        - name: es-secret-password
          mountPath: /etc/creds
          readOnly: true
        - name: es-secret-ca
          mountPath: /var/certs/ca
          readOnly: true
        - name: es-secret-tls
          mountPath: /var/certs/es
          readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: dockercontainerlogdirectory
        hostPath:
          path: /var/log/pods
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker
      - name: config-volume
        configMap:
          name: fluentd-config
      - name: es-secret-password
        secret:
          secretName: elasticsearch-es-elastic-user
      - name: es-secret-ca
        secret:
          secretName: elasticsearch-es-http-certs-internal
      - name: es-secret-tls
        secret:
          secretName: elasticsearch-es-http-ca-internal
