config/business.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-deployment
  namespace: service
  labels:
    app: keys
spec:
  replicas: 2
  selector:
    matchLabels:
      app: business
  template:
    metadata:
      labels:
        app: business
    spec:
        terminationGracePeriodSeconds: 5
        containers:
        - name: business
          image: baitle/business:latest
          imagePullPolicy: Always
          ports:
          - name: http-port
            containerPort: 8080
          - name: grpc-port
            containerPort: 6565
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 150m
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
          livenessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
          startupProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 30
            failureThreshold: 30
            httpGet:
              path: /actuator/health
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: business-service
  namespace: service
spec:
  selector:
    app: business
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http-port
    - name: grpc
      protocol: TCP
      port: 6565
      targetPort: grpc-port
