config/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
    purpose: monitoring-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      purpose: monitoring-service
  template:
    metadata:
      labels:
        app: grafana
        purpose: monitoring-service
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
          - containerPort: 3000
            name: http

          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 472
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  type: LoadBalancer
  selector:
    app: grafana
    purpose: monitoring-service
  ports:
    - name: grafanaui
      protocol: TCP
      port: 3000
      targetPort: http
