config/keys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keys-deployment
  labels:
    app: keys
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keys
  template:
    metadata:
      labels:
        app: keys
    spec:
        terminationGracePeriodSeconds: 5
        containers:
        - name: keys
          image: zath/keys:latest
          imagePullPolicy: Always
          ports:
          - name: http-port
            containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          volumeMounts:
          - name: acl-volume
            mountPath: /home/app/acl.yaml
            subPath: acl.yaml
            readOnly: true
        volumes:
          - name: acl-volume
            configMap:
              name: keys-configmap
              items:
              - key: acl.yaml
                path: acl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keys-service
spec:
  selector:
    app: keys
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http-port
