config/mongo-business.yaml
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: ckan-pv-home
#   namespace: database
#   labels:
#     type: local
# spec:
#   capacity:
#     storage: 30Gi
#   accessModes:
#     - ReadWriteOnce
#   hostPath:
#     path: "/mnt/data/ckan"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-business-service
  namespace: database
spec:
  selector:
    app: mongo-business
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-business-deployment
  namespace: database
  labels:
    app: mongo-business
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-business
  serviceName: mongo-business-service
  template:
    metadata:
      labels:
        app: mongo-business
    spec:
        terminationGracePeriodSeconds: 10
        containers:
        - name: mongo-business
          image: europe-west1-docker.pkg.dev/fcul-cn/cntrips-registry/business-mongo:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-business-storage
          resources:
            requests:
              cpu: 75m
              memory: 512M
            limits:
              cpu: 200m
              memory: 1024M
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
            exec:
              command:
              - mongo
              - --eval
              - db.adminCommand('ping')
          livenessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
            exec:
              command:
              - mongo
              - --eval
              - db.adminCommand('ping')
        volumes:
          - name: mongo-business-storage
            persistentVolumeClaim:
              claimName: mongo-business-storage
