config/mongo-trips.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-trips-service
spec:
  selector:
    app: mongo-trips
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-trips-deployment
  labels:
    app: mongo-trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-trips
  serviceName: "mongo-trips-service"
  template:
    metadata:
      labels:
        app: mongo-trips
    spec:
        containers:
        - name: mongo-trips
          image: ralexandre00/tripsmongo
          imagePullPolicy: Always
          ports:
          - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-trips-claim0
          resources:
            requests:
              cpu: "200m"
        volumes:
          - name: mongo-trips-claim0
            persistentVolumeClaim:
              claimName: mongo-trips-claim0
