config/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  labels:
    app: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
        containers:
        - name: trips
          image: ralexandre00/trips:latest
          imagePullPolicy: Always
          ports:
          - name: http-port
            containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
            httpGet:
              port: http-port
              path: /trip/location/1
          livenessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 2
            httpGet:
              port: http-port
              path: /trip/location/1
        terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  selector:
    app: trips
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http-port
