config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: service
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://keys-service.service.svc.cluster.local:8080/key/consume
    nginx.ingress.kubernetes.io/auth-method: PUT
spec:
  ingressClassName: nginx
  tls:
  - secretName: ingress-secret
  rules:
  - http:
      paths:
      - path: /trip
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 8080
      - path: /tripCount
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 8080
      - path: /key
        pathType: Prefix
        backend:
          service:
            name: keys-service
            port:
              number: 8080
      - path: /business
        pathType: Prefix
        backend:
          service:
            name: business-service
            port:
              number: 8080
      - path: /admin/business/load
        pathType: Prefix
        backend:
          service:
            name: business-service
            port:
              number: 8080
      - path: /value
        pathType: Prefix
        backend:
          service:
            name: value-service
            port:
              number: 8080
